--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
                 <div class="post-heading">
                     <h1>{{ page.title }}</h1>
                     <h2 class="subheading">{{ page.subtitle }}</h2>
-                    <span class="meta">{{ page.date | date_to_string }}</span>
+                    <span class="meta">{{ page.date | date: '%B %d, %Y' }}</span>
                 </div>
             </div>
         </div>
