--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
     <div class="container">
         <a class="navbar-brand"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,6 +12,7 @@
                 <a class="nav-link" href="{{ item.link }}">
                     {{ item.name }}
                 </a>
+                </li>
             {% endfor %}
             </ul>
         </div>
