add syntax highlighting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/assets/css/clean-blog.css" rel="stylesheet">
+    <link href="/assets/css/syntax.css" rel="stylesheet">
     <script src="/assets/js/clean-blog.min.js"></script>
 
     <title>{{ page.title }}</title>
