--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,18 +1,57 @@
-<nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
+<script type="text/javascript">
+$(document).ready(function() {
+    // Transition effect for navbar 
+    $(window).scroll(function() {
+        // checks if window is scrolled more than 500px, adds/removes solid class
+        if($(this).scrollTop() > 100) { 
+            $('.navbar').addClass('navbar-solid');
+        } else {
+            $('.navbar').removeClass('navbar-solid');
+        }
+    });
+});
+</script>
+
+<nav class="navbar navbar-expand-sm fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand"></a>
+        <a class="navbar-brand mb-0 h1" href="/">
+            Chris Luedtke
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu
             <i class="fa fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="collapse navbar-collapse text-right" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
             {% for item in site.data.navigation %}
-                <li class="nav-item">
-                <a class="nav-link" href="{{ item.link }}">
-                    {{ item.name }}
-                </a>
+                {% if item.dropdown %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {% if item.icon %}
+                        <i class="{{ item.icon }}"></i>
+                        {% endif %}
+                        {{ item.name }}
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        {% for subitem in item.dropdown %}
+                        <a class="dropdown-item" href="{{ subitem.link }}">
+                            {% if subitem.icon %}
+                            <i class="{{ subitem.icon }}"></i>
+                            {% endif %}
+                            {{ subitem.name }}
+                        </a>
+                        {% endfor %}
+                    </div>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ item.link }}">
+                        {% if item.icon %}
+                        <i class="{{ item.icon }}"></i>
+                        {% endif %}
+                        {{ item.name }}
+                    </a>
+                </li>
+                {% endif %}
             {% endfor %}
             </ul>
         </div>
